[package]
name = "telemq_authenticator_http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }

# telemq dependencies
telemq_plugin_types = { path = "../plugin_types", version = "0.1", features = ["authenticator"] }
