[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0"
clap = "4.2.4"
reqwest = { version = "0.11.16", features = ["json", "blocking"] }
serde = {version = "1", features = ["derive"]}
tokio = {version = "1.27", features = ["full", "sync", "time"]}
