[package]
name = "mqtt-packets"
version = "0.1.0"
authors = ["Alex Pikalov <alex.pikalov.khar@gmail.com>"]

description = "MQTT 3.1.1 packets"
license = "MIT"
repository = "https://github.com/telemq/telemq"

[features]
v_3_1_1 = []

[dependencies]
bytes = "1.0"
lazy_static = "1.4.0"
log = "0.4.0"
regex = "0.2"
serde = { version = "1.0", features = ["derive"] }
tokio-util = {version = "0.6", features = ["codec"]}
