[package]
name = "telemq_plugin_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"

mqtt-packets = { path = "../mqtt-packets", version = "0.1.0", features = ["v_3_1_1"] }

[features]
authenticator = []

