[package]
name = "telemq"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0"
log = "0.4"
log4rs = {version = "1.0", features = ["console_appender", "file_appender"]}
serde = "1"
toml = "0.5"
regex = "1.4"
clap = "3.0.0-beta.4"
tokio = {version = "1.4", features = ["full", "sync", "time"]}
tokio-util = {version = "0.6.5", features = ["codec"]}
tokio-stream = "0.1.5"
signal-hook = "0.3"
signal-hook-tokio = {version="0.3.0", features = ["futures-v0_3"]}
futures = { version = "0.3.0", features = ["thread-pool"]}
rust-crypto = "0.2.36"
tokio-rustls = "=0.22.0"
num_cpus = "1.13.0"
ipnet = "^2.0.0"
# libc = "0.2"

warp = "0.3"

mqtt-packets = { path = "../mqtt-packets", features = ["v_3_1_1"] }

[dev-dependencies]
maplit = "1"
